--- a/deployment/ShortRestAPI.service
+++ b/deployment/ShortRestAPI.service
@@ -3,13 +3,13 @@ Description= Short URL
 After=network.target
 
 [Service]
-User=None
-WorkingDirectory=/None/apps/ShortRestAPI
-ExecStart=/None/apps/ShortRestAPI/ShortRestAPI
+User=crocodile
+WorkingDirectory=/crocodile/apps/ShortRestAPI
+ExecStart=/crocodile/apps/ShortRestAPI/ShortRestAPI
 Restart=always
 RestartSec=4
 StandardOutput=inherit
-EnvironmentFile=/None/apps/ShortRestAPI/config.env
+EnvironmentFile=/crocodile/apps/ShortRestAPI/config.env
 
 [Install]
 WantedBy=multi-user.target
