--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,12 +57,13 @@ jobs:
           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "\
           touch ${{ env.ENV_FILE_PATH }} && \
           chmod 600 ${{ env.ENV_FILE_PATH }} && \
-          echo 'CONFIG_PATH=${{ env.CONFIG_PATH }}' > ${{ env.ENV_FILE_PATH }} && \
-          echo 'HTTP_SERVER_PASSWORD=${{ secrets.AUTH_PASS }}' >> ${{ env.ENV_FILE_PATH }}"
+          echo 'CONFIG_PATH=${{ env.CONFIG_PATH }}' | sudo tee -a ${{ env.ENV_FILE_PATH }} > /dev/null && \
+          echo 'HTTP_SERVER_PASSWORD=${{ secrets.AUTH_PASS }}' | sudo tee -a ${{ env.ENV_FILE_PATH }} > /dev/null"
       - name: Copy systemd service file
         run: |
           scp -i deploy_key.pem -o StrictHostKeyChecking=no ${{ github.workspace }}/deployment/ShortRestAPI.service ${{ env.HOST }}:/tmp/ShortRestAPI.service
           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "sudo mv /tmp/ShortRestAPI.service /etc/systemd/system/ShortRestAPI.service"
+
       - name: Start application
         run: |
           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "sudo systemctl daemon-reload && systemctl restart ShortRestAPI.service"
